2024-01-08T16:21:19Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7450218805 # 5
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-08
* notice: last 14d: unq all: 150 261
* notice: prev accum: outdated-unq outdated-all / unq all: 2174 6054 / 2355 6314
* notice: next accum: outdated-unq outdated-all / unq all: 2175 6055 / 2356 6316
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +19 +23 -0 -0 / 19 23
* notice: removed / changed dates: [2023-12-25] / [2024-01-08]

2024-01-08T08:21:51Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7444837873 # 4
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-08
* notice: last 14d: unq all: 151 260
* notice: prev accum: outdated-unq outdated-all / unq all: 2174 6054 / 2337 6293
* notice: next accum: outdated-unq outdated-all / unq all: 2174 6054 / 2355 6314
* notice: prev exec diff / last date diff / accum: unq all: +18 +21 -0 -0 / +18 +21 -0 -0 / 18 21
* notice: removed / changed dates: [] / [2024-01-08]

2024-01-08T01:13:44Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7442005632 # 3
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-08
* notice: last 14d: unq all: 139 239
* notice: prev accum: outdated-unq outdated-all / unq all: 2174 6054 / 2336 6292
* notice: next accum: outdated-unq outdated-all / unq all: 2174 6054 / 2337 6293
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2024-01-07]

2024-01-07T16:19:06Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7439363229 # 2