@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-01-08T16:21:19Z",
-  "count_outdated" : 6055,
-  "uniques_outdated" : 2175,
-  "count" : 6316,
-  "uniques" : 2356,
+  "timestamp" : "2024-01-09T08:20:50Z",
+  "count_outdated" : 6056,
+  "uniques_outdated" : 2176,
+  "count" : 6320,
+  "uniques" : 2359,
   "clones" : [
-    {
-      "timestamp": "2023-12-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-12-29T00:00:00Z",
       "count": 11,
@@ -112,6 +103,15 @@
       "uniques": 19,
       "uniques_minmax": [ 18, 19 ],
       "uniques_decinc": [ 0, 19 ]
+    },
+    {
+      "timestamp": "2024-01-09T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
+      "count_decinc": [ 0, 4 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
