@@ -1,12 +1,7 @@
 {
-  "count": 261,
-  "uniques": 150,
+  "count": 264,
+  "uniques": 152,
   "clones": [
-    {
-      "timestamp": "2023-12-26T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-12-29T00:00:00Z",
       "count": 11,
@@ -61,6 +56,11 @@
       "timestamp": "2024-01-08T00:00:00Z",
       "count": 23,
       "uniques": 19
+    },
+    {
+      "timestamp": "2024-01-09T00:00:00Z",
+      "count": 4,
+      "uniques": 3
     }
   ]
 }
